# chitin

./: .gitignore  Cargo.toml  README.md
shell/: chitin.zsh
src/: client.rs  config.rs  main.rs  protocol.rs  provider.rs  service.rs  session.rs  shell.rs
