[package]
name = "chitin"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.5.57", features = ["derive"] }
directories = "6.0.0"
indicatif = "0.18.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "time"] }
toml = "0.9.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
